postInstallScripts/factorio/k8s/factorio-deployment.yml
---
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: server
  name: factorio-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: factoriotools/factorio:stable
          ports:
            - containerPort: 34197
