postInstallScripts/factorio/k8s/factorio-service.yml
---
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: factorio-service
spec:
  type: NodePort
  selector:
    app: server
  ports:
    - name: factorio-udp
      port: 34197
      targetPort: 34197
      protocol: UDP
    - name: factorio-tcp
      port: 27015
      targetPort: 27015
      protocol: TCP
